# mt5linux

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docker/: Dockerfile  README.md  docker-compose.yml  mt5cfg.ini  requirements.txt  start.sh  test_connection.py
docs/: MOTIVATION.md
mt5linux/: __init__.py  __main__.py  constants.py  metatrader5.py  server.py
tests/: test.py  test_01.py
