[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5linux"
version = "1.0.1"
description = "MetaTrader5 for linux users"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Lucas Prett Campagna"}]
dependencies = [
    "numpy",
    "plumbum==1.7.0",
    "pyparsing>=3.1.0,<4",
    "rpyc==5.2.3",
]

[project.urls]
Homepage = "https://github.com/lucas-campagna/mt5linux"

[project.optional-dependencies]
dev = ["build", "twine"]
